--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -64,6 +64,10 @@ main{
   max-width: 1140px;
   margin: 0 auto;
 }
+.section{
+    margin-top: 130px
+    ;
+}
 /* about section styles */
 .about{
     margin-top: 130px
@@ -74,10 +78,10 @@ main{
     text-align: center;
 }
 .section-title{
-    
+    text-align: center;
     font-weight: 700;
     font-size: 35px;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
 }
 .section-description{
     color: #757575;
@@ -99,8 +103,25 @@ main{
 
 }
 /* what i do styles*/
-.what-i-do{
-    margin-top: 130px
-    ;
-}
 
+.skills-container{
+   display: flex; 
+   gap: 24px;
+}
+.skill{
+    background: #FFFFFF;
+box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+border-radius: 5px;
+padding: 30px;
+
+}
+.skill-title{
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+.skill-description{
+
+}
+/* resume styles */
